minor: update benchmarks