@@ -17,7 +17,7 @@ import java.util.concurrent.TimeUnit;
 @State(Scope.Benchmark)
 @Warmup(iterations = 10, time = 1)
 @Measurement(iterations = 10, time = 1)
-@Fork(value = 1, jvmArgsAppend = {"-Xlog:gc*:file=gc.log:time,uptime,level,tags"})
+@Fork(value = 3, jvmArgs = {JvmArgs.I_HEAP_ARG, JvmArgs.M_HEAP_ARG, JvmArgs.GC_TYPE_ARG})
 
 public class PollLatencyBench {
     private RPQ<Integer> queue;
@@ -26,12 +26,11 @@ public class PollLatencyBench {
     private String type;
 
 
-
     final static int STEADY_STATE_SIZE = 65536;
 
     @TearDown(Level.Trial)
     public void teardown() {
-        queue = null;
+        queue.clear();
     }
 
     @Setup(Level.Trial)
